[package]
name = "putzplan"
version = "0.1.1"
authors = ["Marco Amann <trimoq@gmail.com>"]

[dependencies]
chrono = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket = "0.3.8"
rocket_codegen = "0.3.8"
[dependencies.rocket_contrib]
version = "0.3.8"
default-features = false
features = ["handlebars_templates"]
